2003-04-03  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c backend/snapscan.h backend/snapscan-scsi.c
	  backend/snapscan.conf doc/descriptions/snapscan.desc:
	  SnapScan backend 1.4.25 - added support for Epson Perfection 660,
	  enhanced support for Acer 5000

2003-04-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/sane-as6e.man: Added info about $PATH. Minor formatting fixes.
	* doc/sane.man: Reorganization. Updated DEVELOPER'S DOCUMENTATION.
	  Rewrote PROBLEMS in a more user-centric way. Added "HOW CAN YOU
	  HELP" section. Added paragraph about SANE device lists. Updated
	  CONTACT section. Minor additions to the gt68xx and plustek
	  entries. Minor spelling fixes.
	* backend/sm3600-color.c backend/sm3600-gray.c backend/sm3600-homerun.c
	  backend/sm3600-scanmtek.c backend/sm3600-scantool.h backend/sm3600-scanusb.c
	  backend/sm3600-scanutil.c backend/sm3600.c backend/sm3600.h:
	  Fixed comment headers. They were copied verbatim from the dll	backend.
	* AUTHORS backend/artec.c doc/sane-artec.man: Remove Chris Pinkham
	  as active maintainer because his primary email address bounces,
	  and he doesn't respond to mails to other addresses. Marked email
	  addresses and website as dead. Fixed AT3 misdectection that was
	  on the TODO list for some time. Initialize global variables in
	  sane_init.
	* acinclude.m4 aclocal.m4 configure configure.in
	  include/sane/config.h.in frontend/saned.c: Added a switch to
	  disable libusb. Removed switch to enable ipv6 uncondinionally.
	  Check for sys/poll.h.
	* sanei/sanei_usb.c: Added a function to print the buffer contents
	  for the read and write functions. Fixed some DBGs. Fixed a wrong
	  return value.
	* TODO: Removed sm3600, artec and libusb configure switch entries.
	  Updated v4l, sanei buffer print and html manpages entries.
	  Added OS/2 crash entry.
	* include/getopt.h lib/getopt.c lib/getopt1.c: Update to glibc
	  2.3.1 version. This fixes a compilation warning. Further more,